syntax = "proto3";

package pb;

message KickReq {
    enum KickReason {
        LoginConnect = 0;
    }
    KickReason reason = 1;
}

message KickRes {

}
